Changes to fix appearance of header and title on mobile

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -65,7 +65,7 @@
 .col-12 { width: 100%; }
 
 @media (max-width: $breakpoint-lg) {
-  .sm-width-full { width: 100% !important; }
+  .sm-width-full { width: 50% !important; }
 }
 
 .block        { display: block !important; }
@@ -109,7 +109,7 @@
 .mb-0 { margin-bottom: 0; }
 .ml-0 { margin-left: 0; }
 
-.mt-1 { margin-top: $spacer-1; }
+.mt-1 { margin-top: 0; }
 .mr-1 { margin-right: $spacer-1; }
 .mb-1 { margin-bottom: $spacer-1; }
 .ml-1 { margin-left: $spacer-1; }
